--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -1,4 +1,4 @@
-/*!
+sd/*!
  * Start Bootstrap - Scrolling Nav HTML Template (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
@@ -33,45 +33,85 @@ The padding is very important to make sure the scrollspy picks up the right area
 of those sections to manage the look and feel of the site. */
 
 .heading-section {
-  padding-top: 150px;
+  padding-top: 100px;
   text-align: center;
 }
 
 #heading-banner {
   background-color: darkgrey;
+  border-radius: 10px;
   height: 150px;
   width:100%;
   align-items: center;
 }
 
+#heading-banner h1 {
+  line-height: 150px;
+}
+
+#heading-txt {
+  margin: 30px;
+}
+
 .vid-section {
-    padding-top: 150px;
+    padding-top: 100px;
     text-align: center;
     background: #fff;
+    text-align: center;
 }
 
 .vid-section p {
-  width: 800px;
+  margin: 30px;
+}
+
+#vimeo-video {
+  margin: 0 50px 0 50px;
 }
 
 .faq-section {
-    padding-top: 150px;
+    padding-top: 100px;
     /*text-align: center;*/
     background: #fff;
+}
+
+.faq-section p {
+  margin-top: 30px;
 }
 
 .faq-section li {
   list-style-type: none;
 }
 
+/*TODO fix hover and text box reveal to look nice. make sure lines are all equal */
+.faq-section li:hover {
+  color: blue;
+  border-radius: 5px;
+  background-color: gray;
+  transition: all 0.1s ease-in;
+}
+
+.dropdown-hidden {
+  display: block;
+  opacity: 0;
+  max-height: 0;
+  transition: max-height 1s ease-in;
+}
+.dropdown-visbile {
+  display: block;
+  opacity: 1;
+  max-height: 200px;
+}
+
 .lesson-section {
-    padding-top: 150px;
+    padding-top: 100px;
     /*text-align: center;*/
     background: #fff;
 }
 
 .lesson-section li {
   list-style-type: none;
+  margin: 30px 0;
+  margin-left: -42px;
 }
 
 .lesson-section a {
@@ -86,19 +126,19 @@ of those sections to manage the look and feel of the site. */
 }
 
 .resource-section {
-    padding-top: 150px;
+    padding-top: 100px;
     /*text-align: center;*/
     background: #fff;
 }
 
 .resource-section p {
+  margin-top: 30px;
   margin-left: 50px;
-  /*width: 800px;*/
 }
 
 .sign-up-section {
-    height: 70%;
-    padding-top: 150px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     /*text-align: center;*/
     background: #fff;
 
