--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -1,8 +1,3 @@
-sd/*!
- * Start Bootstrap - Scrolling Nav HTML Template (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
 
 body {
     width: 100%;
@@ -14,6 +9,7 @@ html {
     height: 100%;
 }
 
+/* RESPONSIVE NAVBAR */
 @media(min-width:767px) {
     .navbar {
         top: 0px;
@@ -28,10 +24,7 @@ html {
     }
 }
 
-/* Demo Sections - You can use these as guides or delete them - the scroller will work with any sort of height, fixed, undefined, or percentage based.
-The padding is very important to make sure the scrollspy picks up the right area when scrolled to. Adjust the margin and padding of sections and children
-of those sections to manage the look and feel of the site. */
-
+/* HEADING SECTION */
 .heading-section {
   padding-top: 100px;
   text-align: center;
@@ -53,6 +46,7 @@ of those sections to manage the look and feel of the site. */
   margin: 30px;
 }
 
+/* VIDEO SECTION */
 .vid-section {
     padding-top: 100px;
     text-align: center;
@@ -68,6 +62,7 @@ of those sections to manage the look and feel of the site. */
   margin: 0 50px 0 50px;
 }
 
+/* FAQ SECTION */
 .faq-section {
     padding-top: 100px;
     /*text-align: center;*/
@@ -75,19 +70,28 @@ of those sections to manage the look and feel of the site. */
 }
 
 .faq-section p {
+  margin-top: 10px;
+}
+
+.faq-section ul {
   margin-top: 30px;
 }
 
 .faq-section li {
   list-style-type: none;
+  border-radius: 10px;
+  background-color: #d1d1d1;
+  padding: 5px;
+  margin: 10px;
+  transition: all 0.3s ease;
 }
 
 /*TODO fix hover and text box reveal to look nice. make sure lines are all equal */
+
 .faq-section li:hover {
-  color: blue;
   border-radius: 5px;
-  background-color: gray;
-  transition: all 0.1s ease-in;
+  background-color: #bdbdbd;
+  transition: all 0.3s ease;
 }
 
 .dropdown-hidden {
@@ -102,6 +106,7 @@ of those sections to manage the look and feel of the site. */
   max-height: 200px;
 }
 
+/* LESSON SECTION */
 .lesson-section {
     padding-top: 100px;
     /*text-align: center;*/
@@ -125,6 +130,7 @@ of those sections to manage the look and feel of the site. */
   display: block;
 }
 
+/* RESOURCE SECTION */
 .resource-section {
     padding-top: 100px;
     /*text-align: center;*/
@@ -136,6 +142,7 @@ of those sections to manage the look and feel of the site. */
   margin-left: 50px;
 }
 
+/* SIGNUP SECTION */
 .sign-up-section {
     padding-top: 100px;
     padding-bottom: 100px;
